# Whistle

./: .gitignore  .python-version  Procfile  README.md  app.json  manage.py  package.json  pyproject.toml  release.sh  requirements.txt
humans/: enums.py  models.py
telephony/: apps.py  models.py  urls.py  utils.py
telephony/views/: incoming.py  outgoing.py
whistle/: asgi.py  react.py  settings.py  urls.py  wsgi.py
